新增注册功能

--- a/Ldu_group_purchase/Ldu_group_purchase/Class/UserInfo/Controller/XXBLoginViewController.xib
+++ b/Ldu_group_purchase/Ldu_group_purchase/Class/UserInfo/Controller/XXBLoginViewController.xib
@@ -160,6 +160,9 @@
                     <state key="normal" title="注册">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
+                    <connections>
+                        <action selector="registerClick:" destination="-1" eventType="touchUpInside" id="K4h-J7-vMu"/>
+                    </connections>
                 </button>
             </subviews>
             <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
