--- a/Ldu_group_purchase/Ldu_group_purchase/Class/UserInfo/Controller/XXBLoginViewController.xib
+++ b/Ldu_group_purchase/Ldu_group_purchase/Class/UserInfo/Controller/XXBLoginViewController.xib
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7531" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="XXBLoginViewController">
             <connections>
                 <outlet property="autoLogin" destination="bzJ-Y5-jkF" id="IAC-yf-kO8"/>
                 <outlet property="iconButton" destination="9Wx-N4-ZgQ" id="303-mq-gIq"/>
+                <outlet property="logbgView" destination="zJE-xg-0oW" id="T98-2C-fwr"/>
                 <outlet property="rememberPasswowrd" destination="KgN-ux-Get" id="NHH-Qf-rgE"/>
                 <outlet property="userName" destination="9o0-Az-F0i" id="tdR-P9-lyd"/>
                 <outlet property="userNameBG" destination="6tb-Gv-PAl" id="OSC-5f-8gq"/>
@@ -35,7 +36,7 @@
                     </state>
                 </button>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zJE-xg-0oW">
-                    <rect key="frame" x="150" y="238" width="300" height="200"/>
+                    <rect key="frame" x="150" y="240" width="300" height="200"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Cl8-Nr-gGN">
                             <rect key="frame" x="8" y="112" width="284" height="44"/>
@@ -72,10 +73,10 @@
                                 <constraint firstAttribute="width" constant="44" id="VR2-qK-z18"/>
                             </constraints>
                         </imageView>
-                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入用户名" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9o0-Az-F0i">
+                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入账号" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9o0-Az-F0i">
                             <rect key="frame" x="57" y="21" width="235" height="17"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                            <textInputTraits key="textInputTraits"/>
+                            <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES"/>
                         </textField>
                         <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_login_password" translatesAutoresizingMaskIntoConstraints="NO" id="ZZR-Pp-gEA">
                             <rect key="frame" x="8" y="60" width="44" height="44"/>
@@ -87,7 +88,7 @@
                         <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入密码" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="W02-HJ-pgL">
                             <rect key="frame" x="60" y="73" width="232" height="17"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                            <textInputTraits key="textInputTraits"/>
+                            <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES"/>
                         </textField>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KgN-ux-Get">
                             <rect key="frame" x="8" y="170" width="100" height="25"/>
@@ -122,7 +123,7 @@
                             </connections>
                         </button>
                     </subviews>
-                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstItem="Cl8-Nr-gGN" firstAttribute="top" secondItem="saE-bI-esY" secondAttribute="bottom" constant="8" id="3Go-rn-0zL"/>
                         <constraint firstAttribute="trailing" secondItem="9o0-Az-F0i" secondAttribute="trailing" constant="8" id="4EM-Pd-rGd"/>
@@ -169,10 +170,10 @@
             <constraints>
                 <constraint firstAttribute="centerX" secondItem="zJE-xg-0oW" secondAttribute="centerX" id="A08-3j-h0M"/>
                 <constraint firstAttribute="trailing" secondItem="YAI-7B-spG" secondAttribute="trailing" constant="8" id="JoL-SV-vUY"/>
-                <constraint firstItem="zJE-xg-0oW" firstAttribute="top" secondItem="9Wx-N4-ZgQ" secondAttribute="bottom" constant="24" id="Lfh-qI-Hjo"/>
                 <constraint firstAttribute="bottom" secondItem="YAI-7B-spG" secondAttribute="bottom" constant="8" id="MyN-fu-nwP"/>
                 <constraint firstItem="9Wx-N4-ZgQ" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="64" id="jel-zA-8df"/>
                 <constraint firstAttribute="centerX" secondItem="9Wx-N4-ZgQ" secondAttribute="centerX" id="rbe-cl-hvD"/>
+                <constraint firstItem="zJE-xg-0oW" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="240" id="vjE-UE-Vtd"/>
             </constraints>
         </view>
     </objects>
