--- a/Ldu_group_purchase/Ldu_group_purchase/Class/UserInfo/Controller/XXBRegisterVC.xib
+++ b/Ldu_group_purchase/Ldu_group_purchase/Class/UserInfo/Controller/XXBRegisterVC.xib
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.iPad.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="XXBRegisterVC">
             <connections>
+                <outlet property="iconButton" destination="taj-8W-t0m" id="Mdk-5C-vPW"/>
+                <outlet property="registerBGView" destination="sxM-ev-z2Z" id="ubz-8I-8dr"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -13,7 +16,85 @@
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <subviews>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="taj-8W-t0m">
+                    <rect key="frame" x="225" y="50" width="150" height="150"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="150" id="gd0-OM-d8e"/>
+                        <constraint firstAttribute="height" constant="150" id="rCj-HT-UZZ"/>
+                    </constraints>
+                    <state key="normal" image="load">
+                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                </button>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sxM-ev-z2Z">
+                    <rect key="frame" x="150" y="208" width="300" height="224"/>
+                    <subviews>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="btn_green" translatesAutoresizingMaskIntoConstraints="NO" id="Yxv-fy-AOQ">
+                            <rect key="frame" x="8" y="8" width="284" height="44"/>
+                        </imageView>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="btn_green" translatesAutoresizingMaskIntoConstraints="NO" id="IDE-st-cdC">
+                            <rect key="frame" x="8" y="60" width="284" height="44"/>
+                        </imageView>
+                        <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="ic_login_account" translatesAutoresizingMaskIntoConstraints="NO" id="ndw-qP-zRB">
+                            <rect key="frame" x="8" y="8" width="44" height="44"/>
+                        </imageView>
+                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入账号" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2zL-rU-un2">
+                            <rect key="frame" x="60" y="21" width="235" height="17"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <textInputTraits key="textInputTraits"/>
+                        </textField>
+                        <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="ic_login_password" translatesAutoresizingMaskIntoConstraints="NO" id="5in-xb-lvD">
+                            <rect key="frame" x="8" y="60" width="44" height="44"/>
+                        </imageView>
+                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="设置密码" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="m7Y-hO-if0">
+                            <rect key="frame" x="60" y="73" width="232" height="17"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <textInputTraits key="textInputTraits"/>
+                        </textField>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="btn_green" translatesAutoresizingMaskIntoConstraints="NO" id="RpL-eT-era">
+                            <rect key="frame" x="8" y="118" width="284" height="44"/>
+                        </imageView>
+                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="验证密码" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="e7E-HA-E1z">
+                            <rect key="frame" x="60" y="131" width="232" height="17"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <textInputTraits key="textInputTraits"/>
+                        </textField>
+                        <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="ic_login_password" translatesAutoresizingMaskIntoConstraints="NO" id="mAI-9r-yVy">
+                            <rect key="frame" x="8" y="118" width="44" height="44"/>
+                        </imageView>
+                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="APk-52-uiq">
+                            <rect key="frame" x="8" y="170" width="284" height="44"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                            <state key="normal" title="注册" backgroundImage="btn_green">
+                                <color key="titleShadowColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                            <state key="highlighted" backgroundImage="btn_green_highlighted">
+                                <color key="titleShadowColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                        </button>
+                    </subviews>
+                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="300" id="XOp-at-e67"/>
+                        <constraint firstAttribute="height" constant="224" id="peY-gq-mvn"/>
+                    </constraints>
+                </view>
+            </subviews>
+            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstAttribute="centerX" secondItem="sxM-ev-z2Z" secondAttribute="centerX" id="CmY-qK-S9s"/>
+                <constraint firstItem="taj-8W-t0m" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="50" id="b0V-zK-Qm7"/>
+                <constraint firstAttribute="centerX" secondItem="taj-8W-t0m" secondAttribute="centerX" id="h79-sx-WZp"/>
+                <constraint firstItem="sxM-ev-z2Z" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="208" id="yHw-SI-qQ7"/>
+            </constraints>
         </view>
     </objects>
+    <resources>
+        <image name="btn_green" width="10" height="39"/>
+        <image name="btn_green_highlighted" width="8" height="40"/>
+        <image name="ic_login_account" width="21" height="21"/>
+        <image name="ic_login_password" width="21" height="21"/>
+        <image name="load" width="200" height="200"/>
+    </resources>
 </document>
